--- a/cveda/pyproject.toml
+++ b/cveda/pyproject.toml
@@ -1,3 +1,10 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+[project]
+name = "cveda"
+version = "0.1.0"
+description = "Lightweight EDA utilities for computer vision datasets"
+readme = "README.md"
+requires-python = ">=3.8"
+license = { text = "MIT" }
+authors = [
+    { name = "Aditya" }
+]
